zerocopy-derive/tests/ui-msrv/enum.stderr
error: unrecognized representation hint
  --> /zerocopy-derive/tests/ui-msrv/enum.rs:21:8
   |
21 | #[repr("foo")]
   |        ^^^^^

error: unrecognized representation hint
  --> /zerocopy-derive/tests/ui-msrv/enum.rs:28:8
   |
28 | #[repr(foo)]
   |        ^^^

error: must have #[repr(C)] or #[repr(Int)] attribute in order to guarantee this type's memory layout
  --> /zerocopy-derive/tests/ui-msrv/enum.rs:34:10
   |
34 | #[derive(FromBytes)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: this conflicts with another representation hint
  --> /zerocopy-derive/tests/ui-msrv/enum.rs:40:12
   |
40 | #[repr(u8, u16)]
   |            ^^^

error: must have #[repr(C)] or #[repr(Int)] attribute in order to guarantee this type's memory layout
  --> /zerocopy-derive/tests/ui-msrv/enum.rs:46:10
   |
46 | #[derive(FromBytes)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(C)] or #[repr(Int)] attribute in order to guarantee this type's memory layout
  --> /zerocopy-derive/tests/ui-msrv/enum.rs:73:10
   |
73 | #[derive(TryFromBytes)]
   |          ^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `TryFromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(C)] or #[repr(Int)] attribute in order to guarantee this type's memory layout
  --> /zerocopy-derive/tests/ui-msrv/enum.rs:78:10
   |
78 | #[derive(TryFromBytes)]
   |          ^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `TryFromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(C)] or #[repr(Int)] attribute in order to guarantee this type's memory layout
  --> /zerocopy-derive/tests/ui-msrv/enum.rs:96:10
   |
96 | #[derive(FromZeros)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromZeros` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(C)] or #[repr(Int)] attribute in order to guarantee this type's memory layout
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:101:10
    |
101 | #[derive(FromZeros)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `FromZeros` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(C)] or #[repr(Int)] attribute in order to guarantee this type's memory layout
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:107:10
    |
107 | #[derive(FromZeros)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `FromZeros` (in Nightly builds, run with -Z macro-backtrace for more info)

error: FromZeros only supported on enums with a variant that has a discriminant of `0`
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:114:1
    |
114 | / #[repr(u8)]
115 | | enum FromZeros4 {
116 | |     A = 1,
117 | |     B = 2,
118 | | }
    | |_^

error: FromZeros only supported on enums with a variant that has a discriminant of `0`
help: This enum has discriminants which are not literal integers. One of those may define or imply which variant has a discriminant of zero. Use a literal integer to define or imply the variant with a discriminant of zero.
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:123:1
    |
123 | / #[repr(i8)]
124 | | enum FromZeros5 {
125 | |     A = NEGATIVE_ONE,
126 | |     B,
127 | | }
    | |_^

error: FromZeros only supported on enums with a variant that has a discriminant of `0`
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:138:1
    |
138 | / #[repr(u8)]
139 | | enum FromZeros7 {
140 | |     A = 1,
141 | |     B(NotFromZeros),
142 | | }
    | |_^

error: must have #[repr(C)] or #[repr(Int)] attribute in order to guarantee this type's memory layout
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:148:10
    |
148 | #[derive(FromBytes)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `FromBytes` only supported on enums with `#[repr(...)]` attributes `u8`, `i8`, `u16`, or `i16`
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:154:8
    |
154 | #[repr(C)]
    |        ^

error: `FromBytes` only supported on enums with `#[repr(...)]` attributes `u8`, `i8`, `u16`, or `i16`
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:160:8
    |
160 | #[repr(usize)]
    |        ^^^^^

error: `FromBytes` only supported on enums with `#[repr(...)]` attributes `u8`, `i8`, `u16`, or `i16`
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:166:8
    |
166 | #[repr(isize)]
    |        ^^^^^

error: `FromBytes` only supported on enums with `#[repr(...)]` attributes `u8`, `i8`, `u16`, or `i16`
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:172:8
    |
172 | #[repr(u32)]
    |        ^^^

error: `FromBytes` only supported on enums with `#[repr(...)]` attributes `u8`, `i8`, `u16`, or `i16`
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:178:8
    |
178 | #[repr(i32)]
    |        ^^^

error: `FromBytes` only supported on enums with `#[repr(...)]` attributes `u8`, `i8`, `u16`, or `i16`
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:184:8
    |
184 | #[repr(u64)]
    |        ^^^

error: `FromBytes` only supported on enums with `#[repr(...)]` attributes `u8`, `i8`, `u16`, or `i16`
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:190:8
    |
190 | #[repr(i64)]
    |        ^^^

error: must have #[repr(u8)] or #[repr(i8)] attribute in order to guarantee this type's alignment
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:460:10
    |
460 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(u8)] or #[repr(i8)] attribute in order to guarantee this type's alignment
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:466:10
    |
466 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(u8)] or #[repr(i8)] attribute in order to guarantee this type's alignment
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:472:10
    |
472 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(u8)] or #[repr(i8)] attribute in order to guarantee this type's alignment
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:478:10
    |
478 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(u8)] or #[repr(i8)] attribute in order to guarantee this type's alignment
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:484:10
    |
484 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(u8)] or #[repr(i8)] attribute in order to guarantee this type's alignment
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:490:10
    |
490 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(u8)] or #[repr(i8)] attribute in order to guarantee this type's alignment
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:496:10
    |
496 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(u8)] or #[repr(i8)] attribute in order to guarantee this type's alignment
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:502:10
    |
502 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(u8)] or #[repr(i8)] attribute in order to guarantee this type's alignment
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:508:10
    |
508 | #[derive(Unaligned)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cannot derive `Unaligned` on type with alignment greater than 1
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:515:12
    |
515 | #[repr(u8, align(2))]
    |            ^^^^^

error: cannot derive `Unaligned` on type with alignment greater than 1
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:521:12
    |
521 | #[repr(i8, align(2))]
    |            ^^^^^

error: this conflicts with another representation hint
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:527:18
    |
527 | #[repr(align(1), align(2))]
    |                  ^^^^^

error: this conflicts with another representation hint
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:533:18
    |
533 | #[repr(align(2), align(4))]
    |                  ^^^^^

error: must have #[repr(C)] or #[repr(Int)] attribute in order to guarantee this type's memory layout
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:566:10
    |
566 | #[derive(IntoBytes)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: must have #[repr(C)] or #[repr(Int)] attribute in order to guarantee this type's memory layout
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:572:10
    |
572 | #[derive(IntoBytes)]
    |          ^^^^^^^^^
    |
    = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: generic parameters may not be used in const operations
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:580:7
    |
580 |     A(T),
    |       ^ cannot perform const operation using `T`
    |
    = note: type parameters may not be used in const expressions

error[E0658]: custom discriminant values are not allowed in enums with tuple or struct variants
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:140:9
    |
140 |     A = 1,
    |         ^ disallowed custom discriminant
141 |     B(NotFromZeros),
    |     --------------- tuple variant defined here
    |
    = note: see issue #60553 <https://github.com/rust-lang/rust/issues/60553> for more information

error[E0565]: meta item in `repr` must be an identifier
  --> /zerocopy-derive/tests/ui-msrv/enum.rs:21:8
   |
21 | #[repr("foo")]
   |        ^^^^^

error[E0552]: unrecognized representation hint
  --> /zerocopy-derive/tests/ui-msrv/enum.rs:28:8
   |
28 | #[repr(foo)]
   |        ^^^

error[E0566]: conflicting representation hints
  --> /zerocopy-derive/tests/ui-msrv/enum.rs:40:8
   |
40 | #[repr(u8, u16)]
   |        ^^  ^^^
   |
   = note: `#[deny(conflicting_repr_hints)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>

error[E0277]: the trait bound `UnsafeCell<()>: Immutable` is not satisfied
  --> /zerocopy-derive/tests/ui-msrv/enum.rs:55:10
   |
55 | #[derive(Immutable)]
   |          ^^^^^^^^^ the trait `Immutable` is not implemented for `UnsafeCell<()>`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `Immutable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `UnsafeCell<u8>: Immutable` is not satisfied
  --> /zerocopy-derive/tests/ui-msrv/enum.rs:63:10
   |
63 | #[derive(Immutable)]
   |          ^^^^^^^^^ the trait `Immutable` is not implemented for `UnsafeCell<u8>`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `Immutable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotTryFromBytes: TryFromBytes` is not satisfied
  --> /zerocopy-derive/tests/ui-msrv/enum.rs:86:10
   |
86 | #[derive(TryFromBytes)]
   |          ^^^^^^^^^^^^ the trait `TryFromBytes` is not implemented for `NotTryFromBytes`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `TryFromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotFromZeros: TryFromBytes` is not satisfied
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:131:10
    |
131 | #[derive(FromZeros)]
    |          ^^^^^^^^^ the trait `TryFromBytes` is not implemented for `NotFromZeros`
    |
    = help: see issue #48214
    = note: this error originates in the derive macro `FromZeros` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotFromZeros: FromZeros` is not satisfied
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:131:10
    |
131 | #[derive(FromZeros)]
    |          ^^^^^^^^^ the trait `FromZeros` is not implemented for `NotFromZeros`
    |
    = help: see issue #48214
    = note: this error originates in the derive macro `FromZeros` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `bool: FromBytes` is not satisfied
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:195:10
    |
195 | #[derive(FromBytes)]
    |          ^^^^^^^^^ the trait `FromBytes` is not implemented for `bool`
    |
    = help: see issue #48214
    = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `(): PaddingFree<IntoBytes1, 1_usize>` is not satisfied
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:542:10
    |
542 | #[derive(IntoBytes)]
    |          ^^^^^^^^^ the trait `PaddingFree<IntoBytes1, 1_usize>` is not implemented for `()`
    |
    = help: the following implementations were found:
              <() as PaddingFree<T, 0_usize>>
    = help: see issue #48214
    = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `(): PaddingFree<IntoBytes2, 3_usize>` is not satisfied
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:553:10
    |
553 | #[derive(IntoBytes)]
    |          ^^^^^^^^^ the trait `PaddingFree<IntoBytes2, 3_usize>` is not implemented for `()`
    |
    = help: the following implementations were found:
              <() as PaddingFree<T, 0_usize>>
    = help: see issue #48214
    = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `(): PaddingFree<IntoBytes3, 2_usize>` is not satisfied
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:559:10
    |
559 | #[derive(IntoBytes)]
    |          ^^^^^^^^^ the trait `PaddingFree<IntoBytes3, 2_usize>` is not implemented for `()`
    |
    = help: the following implementations were found:
              <() as PaddingFree<T, 0_usize>>
    = help: see issue #48214
    = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: generic `Self` types are currently not permitted in anonymous constants
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:577:10
    |
577 | #[derive(IntoBytes)]
    |          ^^^^^^^^^
    |
note: not a concrete type
   --> /zerocopy-derive/tests/ui-msrv/enum.rs:577:10
    |
577 | #[derive(IntoBytes)]
    |          ^^^^^^^^^
    = note: this error originates in the derive macro `IntoBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 51 previous errors

Some errors have detailed explanations: E0277, E0552, E0565, E0566, E0658.
For more information about an error, try `rustc --explain E0277`.
